--- a/style.css
+++ b/style.css
@@ -1,1 +1,81 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Slab:wght@500&family=Source+Sans+Pro:wght@200;400;600&display=swap');
+
+h1{
+    text-align: center;
+    font-family: 'Abril Fatface';
+    font-style: normal;
+    font-weight: 400;
+}
+
+nav {
+    border-top: 2px solid #eee;
+    border-bottom: 2px solid #eee;
+    padding-left: px;
+    
+}
+
+li {
+    list-style: none;
+    text-decoration: none;
+    padding: 5px;
+    display: inline-block;
+
+}
+
+h2 {
+    font-family: 'Roboto Slab';
+    font-style: bolder;
+    font-weight: 500;
+}
+
+h4 {
+    font-family: 'Abril Fatface';
+    font-style: normal;
+    font-weight: 400;
+}
+
+h5 {
+    font-family: 'Abril Fatface';
+    font-style: normal;
+    font-weight: 400;
+    color: #dd3232;
+}
+
+.newspaper-container {
+    width: 700px;
+    margin: auto;
+    border-radius: 20px;
+    background: white;
+    box-shadow: 10px 20px #ddd;
+    padding: 10px;
+}
+
+body {
+    font-family: 'Source Sans Pro';
+    font-style: normal;
+    font-weight: 200;
+    background-color: #eee;
+}
+
+main > p {
+    text-align: justify;
+}
+p {
+    text-align: center;
+}
+
+section {
+    display: inline-block;
+    width: 40%;
+    padding: 30px;
+    
+}
+
+#pic {
+    width: 700px;
+}
+
+#border {
+    color: #eee;
+}
+
